--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,163 @@
-/*
- * Globals
- */
+	/*------
+	GENERAL ELEMENTS
+	------*/
+	html, body {
+		background-color: #333;
+		font-family: 'Raleway', sans-serif;
+	}
 
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
+	a {
+		outline: none;
+		color: #fff;
+	}
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
+	a:hover {
+		outline: none;
+		color: #fff;
+	}
+	a:focus, a:visited {
+		outline: none;
+		color: #fff;
+	}
+	.btn{
+		text-transform: uppercase;
+		padding: 10px 30px;
+		border: 1px solid #fff;
+		border-radius: 0;
+		letter-spacing: 5px;
+	}
+	.btn:hover{
+		background: #56B3DF;
+	}
 
 
-/*
- * Base structure
- */
 
-html,
-body {
-  height: 100%;
-  background-color: #333;
-  font-family: 'Raleway', sans-serif;
-}
-body {
-  color: #fff;
-  text-align: center;
 
-}
-img{
-max-width: 100%;
-}
 
-/* navbar */
-.navbar-light .navbar-nav .nav-link{
-  color: white !important;
-  font-size: 18px;
-}
 
-.navbar-light .navbar-nav .nav-link:hover{
-  color: #244859 !important;
-  font-size: 18px;
-}
 
-.navbar-light .navbar-brand{
-  width: 18%;
-}
 
-/* HOME BANNER */
 
-.header-text{
-  color: white;
-  text-align: left;
-}
 
-.header-text h2{
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 2px;
-  font-size: 40px;
-}
+	/*------
+	TOP PART 
+	------*/
+	.logo{
+		display: inline-block;
+	}
+	.container-top{
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+	}
+	.top-wrap {
+		padding: 25px 0;
+	}
+	.top-wrap .custom-container{
+		position: relative;
+	}
 
-.home-banner{
-  height: 100vh;
-  padding-top: 10rem;
-  padding-bottom: calc(10rem - 56px);
-  background-image: url('/images/banner.jpg');
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  overflow: hidden;
-}
 
-/* Butoane */
-.btn{
-  padding: 5px 40px;
-  background: transparent;
-  color: white;
-  border: 1px solid white;
-  border-radius: 0;
-  font-size: 18px;
-  font-weight: 500 !important;
-  margin-top: 40px;
-  letter-spacing: 2px;
-}
 
-.btn:hover{
-  background: white;
-  color: #58B3DF;
-}
+
+	/*------
+	FOOTER 
+	------*/
+
+
+
+
+	/*------
+	MAIN NAV
+	------*/
+	#main_nav {
+		display: inline-block;
+		position: absolute;
+		right: 0;
+		top: 23px;
+	}
+	ul#nav > li > a, ul#nav_mobile > li > a {
+		color: #fff !important;
+		font-size: 18px;
+		padding: 0 15px;
+	}
+
+	ul#nav > li, ul#nav_mobile > li {
+
+	}
+
+	ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
+		color: #244859 !important;
+	}
+
+
+
+	/*------
+	CUSTOM ELEMENTS
+	------*/
+	.custom-container{
+		width: 1140px;
+		max-width: 100%;
+		margin: 0 auto;
+	}
+
+	.home-banner {
+		overflow: hidden;
+		position: relative;
+		height: 100vh;
+	}
+	.header-text {
+		color: white;
+		text-align: left;
+	}
+	.header-text h2 {
+		text-transform: uppercase;
+		font-weight: 400;
+		letter-spacing: 2px;
+		font-size: 40px;
+	}
+	.home-banner .btn{
+		margin-top: 20px;
+	}
+
+
+
+	/*------
+	RESPONSIVE CSS
+	------ */
+
+	@media (max-width: 1440px){
+
+	}
+	@media (max-width: 1280px){
+
+	}
+	@media (max-width: 1024px){
+
+	}
+	@media (max-width: 991px){
+
+	}
+	@media (max-width: 980px){
+
+	}
+	@media (max-width: 860px){
+
+	}
+	@media (max-width: 768px){ 
+
+	}
+	@media (max-width: 767px){
+
+	}
+	@media (max-width: 640px){
+
+	}
+
+	@media (max-width: 480px){
+
+	}
+	@media (max-width: 320px){
+
+	}
