--- a/css/style.css
+++ b/css/style.css
@@ -1,168 +1,163 @@
-	/*------
-	GENERAL ELEMENTS
-	------*/
-	html, body {
-		background-color: #333;
-		font-family: 'Raleway', sans-serif;
-	}
+/*------
+GENERAL ELEMENTS
+------*/
+html, body {
+	background-color: #333;
+	font-family: 'Raleway', sans-serif;
+}
 
-	a {
-		outline: none;
-		color: #fff;
-	}
+a {
+	outline: none;
+	color: #fff;
+}
 
-	a:hover {
-		outline: none;
-		color: #fff;
-	}
-	a:focus, a:visited {
-		outline: none;
-		color: #fff;
-	}
-	.btn{
-		text-transform: uppercase;
-		padding: 10px 30px;
-		border: 1px solid #fff;
-		border-radius: 0;
-		letter-spacing: 5px;
-	}
-	.btn:hover{
-		background: #56B3DF;
-	}
-
-
+a:hover {
+	outline: none;
+	color: #fff;
+}
+a:focus, a:visited {
+	outline: none;
+	color: #fff;
+}
+.btn{
+	text-transform: uppercase;
+	padding: 10px 30px;
+	border: 1px solid #fff;
+	border-radius: 0;
+	letter-spacing: 5px;
+}
+.btn:hover{
+	background: #56B3DF;
+}
 
 
-
-
-
-
-
-
-	/*------
-	TOP PART 
-	------*/
-	.logo{
-		display: inline-block;
-	}
-	.container-top{
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-	}
-	.top-wrap {
-		padding: 25px 0;
-	}
-	.top-wrap .custom-container{
-		position: relative;
-	}
+/*------
+TOP PART 
+------*/
+.logo{
+	display: inline-block;
+}
+.container-top{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+.top-wrap {
+	padding: 25px 0;
+}
+.top-wrap .custom-container{
+	position: relative;
+}
 
 
 
 
-	/*------
-	FOOTER 
-	------*/
+/*------
+FOOTER 
+------*/
 
 
 
 
-	/*------
-	MAIN NAV
-	------*/
-	#main_nav {
-		display: inline-block;
-		position: absolute;
-		right: 0;
-		top: 23px;
-	}
-	ul#nav > li > a, ul#nav_mobile > li > a {
-		color: #fff !important;
-		font-size: 18px;
-		padding: 0 15px;
-	}
+/*------
+MAIN NAV
+------*/
+#main_nav {
+	display: inline-block;
+	position: absolute;
+	right: 0;
+	top: 23px;
+}
+ul#nav > li > a, ul#nav_mobile > li > a {
+	color: #fff !important;
+	font-size: 18px;
+	padding: 0 15px;
+}
 
-	ul#nav > li, ul#nav_mobile > li {
+ul#nav > li, ul#nav_mobile > li {
 
-	}
+}
 
-	ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
-		color: #244859 !important;
-	}
-
-
-
-	/*------
-	CUSTOM ELEMENTS
-	------*/
-	.custom-container{
-		width: 1140px;
-		max-width: 100%;
-		margin: 0 auto;
-	}
-
-	.home-banner{
-		height: 100vh;
-		background-image: url('../images/banner.jpg');
-		background-position: center center;
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-		background-size: cover;
-		overflow: hidden;
-	}
-	.header-text {
-		color: white;
-		text-align: left;
-	}
-	.header-text h2 {
-		text-transform: uppercase;
-		font-weight: 400;
-		letter-spacing: 2px;
-		font-size: 40px;
-	}
-	.home-banner .btn{
-		margin-top: 20px;
-	}
+ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
+	color: #244859 !important;
+}
 
 
 
-	/*------
-	RESPONSIVE CSS
-	------ */
+/*------
+CUSTOM ELEMENTS
+------*/
+.custom-container{
+	width: 1140px;
+	max-width: 100%;
+	margin: 0 auto;
+}
 
-	@media (max-width: 1440px){
+.home-banner{
+	height: 100vh;
+	background-image: url('../images/banner.jpg');
+	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	overflow: hidden;
+}
+.header-text {
+	color: white;
+	text-align: left;
+}
+.header-text h2 {
+	text-transform: uppercase;
+	font-weight: 400;
+	letter-spacing: 2px;
+	font-size: 40px;
+}
+.header-2b img {
+	width: 300px;
+}
+.home-banner .btn{
+	margin-top: 20px;
+}
 
-	}
-	@media (max-width: 1280px){
 
-	}
-	@media (max-width: 1024px){
 
-	}
-	@media (max-width: 991px){
+/*------
+RESPONSIVE CSS
+------ */
 
-	}
-	@media (max-width: 980px){
+@media (max-width: 1440px){
 
-	}
-	@media (max-width: 860px){
+}
+@media (max-width: 1280px){
 
-	}
-	@media (max-width: 768px){ 
+}
+@media (max-width: 1024px){
 
-	}
-	@media (max-width: 767px){
+}
+@media (max-width: 991px){
 
-	}
-	@media (max-width: 640px){
+}
+@media (max-width: 980px){
 
-	}
+}
+@media (max-width: 860px){
 
-	@media (max-width: 480px){
+}
+@media (max-width: 768px){ 
 
-	}
-	@media (max-width: 320px){
+}
+@media (max-width: 767px){
 
-	}
+}
+@media (max-width: 640px){
+
+}
+
+@media (max-width: 480px){
+
+}
+@media (max-width: 320px){
+
+}
