--- a/css/default.css
+++ b/css/default.css
@@ -20,6 +20,9 @@
 	.collapse.navbar-collapse{
 		display: block;
 	}
+	.container-fluid, .navbar{
+		padding: 0;
+	}
 	#nav {
 		display: block;
 	}
