--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,6 @@ a:focus, a:visited {
 /*------
 TOP PART 
 ------*/
-.logo{
-	display: inline-block;
-}
 .container-top{
 	position: fixed;
 	top: 0;
@@ -49,6 +46,13 @@ TOP PART
 .top-wrap .custom-container{
 	position: relative;
 }
+.logo{
+	display: inline-block;
+}
+.logo img {
+    width: 200px;
+}
+
 
 
 
@@ -64,17 +68,19 @@ FOOTER
 MAIN NAV
 ------*/
 #main_nav {
-	display: inline-block;
-	position: absolute;
-	right: 0;
-	top: 23px;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 31px;
 }
 ul#nav > li > a, ul#nav_mobile > li > a {
 	color: #fff !important;
 	font-size: 18px;
 	padding: 0 15px;
 }
-
+ul#nav > li:last-child > a, ul#nav_mobile > li:last-child > a{
+	padding-right: 0;
+}
 ul#nav > li, ul#nav_mobile > li {
 
 }
@@ -105,8 +111,9 @@ CUSTOM ELEMENTS
 	overflow: hidden;
 }
 .header-text {
-	color: white;
-	text-align: left;
+    color: white;
+    text-align: left;
+    padding: 40px 0;
 }
 .header-text h2 {
 	text-transform: uppercase;
