--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 GENERAL ELEMENTS
 ------*/
 html, body {
-	background-color: #333;
 	font-family: 'Raleway', sans-serif;
+	color: #244859;
 }
 
 a {
@@ -41,6 +41,7 @@ TOP PART
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 9;
 }
 .top-wrap {
 	padding: 25px 0;
@@ -131,7 +132,22 @@ CUSTOM ELEMENTS
 .home-banner .btn{
 	margin-top: 20px;
 }
-
+.team_name {
+    font-weight: bold;
+    color: #56b3df;
+    text-transform: capitalize;
+    font-size: 68px;
+    line-height: 78px;
+}
+.team_function{
+	color: #56b3df;
+	font-size: 30px;
+	line-height: 40px;
+}
+.team_info {
+    font-size: 24px;
+    line-height: 34px;
+}
 
 
 /*------
