--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ TOP PART
 	left: 0;
 	right: 0;
 	z-index: 9;
+		transition: 0.5s all ease;
+}
+.scrolled-top{
+	 /*background: #fff;*/
+	transition: 0.5s all ease;
 }
 .top-wrap {
 	padding: 25px 0;
@@ -147,6 +152,28 @@ CUSTOM ELEMENTS
 .team_info {
     font-size: 24px;
     line-height: 34px;
+}
+.team_poto {
+    width: auto;
+    height: 500px;
+}
+.edge::before {
+    border-color: white #56b3df;
+    border-style: solid;
+
+    content: "";
+    position: absolute;
+    top: 0;
+    transition: all 0.2s ease 0s;
+    z-index: -2;
+}
+.edge-left::before {
+    left: 0;
+        border-width: 500px 0 0 500px;
+}
+.edge-right::before {
+    right: 0;
+    border-width: 500px 500px 0 0;
 }
 
 
