--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,232 @@
-/*------
-GENERAL ELEMENTS
-------*/
-html, body {
-	font-family: 'Raleway', sans-serif;
-	color: #244859;
-}
+	/*------
+	GENERAL ELEMENTS
+	------*/
+	html, body {
+		font-family: 'Raleway', sans-serif;
+		color: #244859;
+	}
 
-a {
-	outline: none;
-	color: #fff;
-}
+	a {
+		outline: none;
+		color: #fff;
+	}
 
-a:hover {
-	outline: none;
-	color: #fff;
-	text-decoration: none;
-}
-a:focus, a:visited {
-	text-decoration: none;
-	outline: none;
-	color: #fff;
-}
-.btn{
-	text-transform: uppercase;
-	padding: 10px 30px;
-	border: 1px solid #fff;
-	border-radius: 0;
-	letter-spacing: 5px;
-}
-.btn:hover{
-	background: #56B3DF;
-}
+	a:hover {
+		outline: none;
+		color: #fff;
+		text-decoration: none;
+	}
+	a:focus, a:visited {
+		text-decoration: none;
+		outline: none;
+		color: #fff;
+	}
+	.btn{
+		text-transform: uppercase;
+		padding: 10px 30px;
+		border: 1px solid #fff;
+		border-radius: 0;
+		letter-spacing: 5px;
+	}
+	.btn:hover{
+		background: #56B3DF;
+	}
 
 
-/*------
-TOP PART 
-------*/
-.container-top{
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 9;
+	/*------
+	TOP PART 
+	------*/
+	.container-top{
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		z-index: 9;
 		transition: 0.5s all ease;
-}
-.scrolled-top{
-	 /*background: #fff;*/
-	transition: 0.5s all ease;
-}
-.top-wrap {
-	padding: 25px 0;
-}
-.top-wrap .custom-container{
-	position: relative;
-}
-.logo{
-	display: inline-block;
-}
-.logo img {
-    width: 200px;
-}
+	}
+	.scrolled-top{
+		background: #56b3df;
+		transition: 0.5s all ease;
+	}
+	.scrolled-top .top-wrap {
+		padding: 5px 0;
+		transition: 0.5s all ease;
+	}
+	.top-wrap {
+		padding: 25px 0;
+		transition: 0.5s all ease;
+	}
+	.top-wrap .custom-container{
+		position: relative;
+	}
+	.logo{
+		display: inline-block;
+	}
+	.logo img {
+		width: 200px;
+		transition: 0.5s all ease;
+	}
+	.scrolled-top .logo img {
+		width: 180px;
+		transition: 0.5s all ease;
+	}
 
 
 
 
 
-/*------
-FOOTER 
-------*/
+	/*------
+	FOOTER 
+	------*/
 
 
 
 
-/*------
-MAIN NAV
-------*/
-#main_nav {
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    top: 31px;
-}
-ul#nav > li > a, ul#nav_mobile > li > a {
-	color: #fff !important;
-	font-size: 18px;
-	padding: 0 15px;
-}
-ul#nav > li:last-child > a, ul#nav_mobile > li:last-child > a{
-	padding-right: 0;
-}
-ul#nav > li, ul#nav_mobile > li {
+	/*------
+	MAIN NAV
+	------*/
+	#main_nav {
+		display: inline-block;
+		position: absolute;
+		right: 0;
+		top: 16px;
+		transition: 0.5s all ease;
+	}
+	.scrolled-top #main_nav{
+transition: 0.5s all ease;
+top: 13px;
+	}
+	ul#nav > li > a, ul#nav_mobile > li > a {
+		color: #fff !important;
+		font-size: 18px;
+		padding: 0 15px;
+	}
+	ul#nav > li:last-child > a, ul#nav_mobile > li:last-child > a{
+		padding-right: 0;
+	}
+	ul#nav > li, ul#nav_mobile > li {
 
-}
+	}
 
-ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
-	color: #244859 !important;
-}
-
-
-
-/*------
-CUSTOM ELEMENTS
-------*/
-.custom-container{
-	width: 1140px;
-	max-width: 100%;
-	margin: 0 auto;
-}
-
-.home-banner{
-	height: 100vh;
-	background-image: url('../images/banner.jpg');
-	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
-.home-banner .v-align{
-	overflow: hidden;
-}
-.header-text {
-    color: white;
-    text-align: left;
-    padding: 40px 0;
-}
-.header-text h2 {
-	text-transform: uppercase;
-	font-weight: 400;
-	letter-spacing: 2px;
-	font-size: 35px;
-}
-.header-2b img {
-	width: 300px;
-}
-.home-banner .btn{
-	margin-top: 20px;
-}
-.team_name {
-    font-weight: bold;
-    color: #56b3df;
-    text-transform: capitalize;
-    font-size: 68px;
-    line-height: 78px;
-}
-.team_function{
-	color: #56b3df;
-	font-size: 30px;
-	line-height: 40px;
-}
-.team_info {
-    font-size: 24px;
-    line-height: 34px;
-}
-.team_poto {
-    width: auto;
-    height: 500px;
-}
-.edge::before {
-    border-color: white #56b3df;
-    border-style: solid;
-
-    content: "";
-    position: absolute;
-    top: 0;
-    transition: all 0.2s ease 0s;
-    z-index: -2;
-}
-.edge-left::before {
-    left: 0;
-        border-width: 500px 0 0 500px;
-}
-.edge-right::before {
-    right: 0;
-    border-width: 500px 500px 0 0;
-}
+	ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
+		color: #244859 !important;
+	}
 
 
-/*------
-RESPONSIVE CSS
------- */
 
-@media (max-width: 1440px){
+	/*------
+	CUSTOM ELEMENTS
+	------*/
+	.custom-container{
+		width: 1140px;
+		max-width: 100%;
+		margin: 0 auto;
+	}
 
-}
-@media (max-width: 1280px){
+	.home-banner{
+		height: 100vh;
+		background-image: url('../images/banner.jpg');
+		background-position: center center;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+	}
+	.home-banner .v-align{
+		overflow: hidden;
+	}
+	.header-text {
+		color: white;
+		text-align: left;
+		padding: 40px 0;
+	}
+	.header-text h2 {
+		text-transform: uppercase;
+		font-weight: 400;
+		letter-spacing: 2px;
+		font-size: 35px;
+	}
+	.header-2b img {
+		width: 300px;
+	}
+	.home-banner .btn{
+		margin-top: 20px;
+	}
+	.team_name {
+		font-weight: bold;
+		color: #56b3df;
+		text-transform: capitalize;
+		font-size: 68px;
+		line-height: 78px;
+	}
+	.team_function{
+		color: #56b3df;
+		font-size: 30px;
+		line-height: 40px;
+	}
+	.team_info {
+		font-size: 24px;
+		line-height: 34px;
+	}
+	.team_poto {
+		width: auto;
+		height: 500px;
+	}
+	.edge::before {
+		border-color: white #56b3df;
+		border-style: solid;
 
-}
-@media (max-width: 1024px){
+		content: "";
+		position: absolute;
+		top: 0;
+		transition: all 0.2s ease 0s;
+		z-index: -2;
+	}
+	.edge-left::before {
+		left: 0;
+		border-width: 500px 0 0 500px;
+	}
+	.edge-right::before {
+		right: 0;
+		border-width: 500px 500px 0 0;
+	}
 
-}
-@media (max-width: 991px){
 
-}
-@media (max-width: 980px){
+	/*------
+	RESPONSIVE CSS
+	------ */
 
-}
-@media (max-width: 860px){
+	@media (max-width: 1440px){
 
-}
-@media (max-width: 768px){ 
+	}
+	@media (max-width: 1280px){
 
-}
-@media (max-width: 767px){
+	}
+	@media (max-width: 1024px){
 
-}
-@media (max-width: 640px){
+	}
+	@media (max-width: 991px){
 
-}
+	}
+	@media (max-width: 980px){
 
-@media (max-width: 480px){
+	}
+	@media (max-width: 860px){
 
-}
-@media (max-width: 320px){
+	}
+	@media (max-width: 768px){ 
 
-}
+	}
+	@media (max-width: 767px){
+
+	}
+	@media (max-width: 640px){
+
+	}
+
+	@media (max-width: 480px){
+
+	}
+	@media (max-width: 320px){
+
+	}
