--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,20 @@
 		width: 200px;
 		transition: 0.5s all ease;
 	}
+	
 	.scrolled-top .logo img {
 		width: 180px;
 		transition: 0.5s all ease;
 	}
-
+	.scrolled-nav {
+		display: none;
+	}
+	.scrolled-top .initial-logo {
+		display: none;
+	}
+	.scrolled-top .scrolled-nav {
+		display: block;
+	}
 
 
 
