--- a/css/style.css
+++ b/css/style.css
@@ -199,19 +199,20 @@
     font-weight: bold;
     color: #56b3df;
     text-transform: capitalize;
-    font-size: 55px;
-    line-height: 65px;
+    font-size: 35px;
+    line-height: 45px;
 }
 	.team_function{
 		color: #56b3df;
-		font-size: 30px;
-		line-height: 40px;
+		font-size: 25px;
+		line-height: 30px;
 	}
 .team_info {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 24px;
     margin-top: 25px;
     width: 750px;
+    max-width: 100%;
 }
 	.team_photo {
 		width: auto;
