--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 
 	/*------
-	TOP PART 
+	TOP PART
 	------*/
 	.container-top{
 		position: fixed;
@@ -89,7 +89,7 @@
 
 
 	/*------
-	FOOTER 
+	FOOTER
 	------*/
 .footer-wrapper {
     color: #fff;
@@ -134,6 +134,12 @@
 	/*------
 	CUSTOM ELEMENTS
 	------*/
+.horder-container{
+	width: 600px;
+	max-width: 100%;
+	margin: 0 auto;
+}
+
 	.custom-container{
 		width: 1140px;
 		max-width: 100%;
@@ -171,12 +177,38 @@
 		margin-top: 20px;
 	}
 .home-order {
-    background: url(https://media.istockphoto.com/photos/time-to-get-productive-picture-id859664392?s=2048x2048);
+    background: url(../images/Home-order.jpg);
     background-size: cover;
     background-size: no-repeat;
-    min-height: 600px;
+    min-height: 350px;
     position: relative;
+		text-align: center;
+		color: white;
 }
+
+.home-order span{
+	color: white;
+	font-weight: 100;
+	font-size: 30px;
+}
+
+.home-order h4{
+	text-transform: uppercase;
+	font-weight: 400;
+	letter-spacing: 2px;
+	font-size: 32px;
+}
+
+.home-order input{
+	margin-top: 60px;
+	font-size: 30px;
+	border: none;
+	background: transparent;
+	color:#56B3DF;
+	font-weight: 900;
+	padding: 0 5px;
+}
+
 	/*-- about --*/
 	.about-banner{
 		background: url(../images/about-us.png);
@@ -279,7 +311,7 @@
 	@media (max-width: 860px){
 
 	}
-	@media (max-width: 768px){ 
+	@media (max-width: 768px){
 
 	}
 	@media (max-width: 767px){
