--- a/css/style.css
+++ b/css/style.css
@@ -176,24 +176,26 @@
 	}
 
 #why-us .gray-bg {
-	padding: 30px 0;
+    padding: 30px 0;
+    min-height: 150px;
 }
 #why-us i{
 	font-size: 50px;
 	transition: 0.5s all ease;
 }
 #why-us p{
-	font-size: 30px;
+	font-size: 18px;
 	margin: 10px 0 0;
-	display: none;
+	display: block;
 	transition: 0.5s all ease;
 }
 #why-us .row > div:hover i{
-	font-size: 30px;
+	font-size: 70px;
 }
 #why-us .row > div:hover p{
 	display: block;
 	transition: 0.5s all ease;
+	font-size: 0;
 }
 	.home-order {
 		background: url(../images/Home-order.jpg);
