--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,86 @@
 	}
 
 
+
+
+/* TEST */
+.choose-us-wraper {
+  padding: 50px 0;
+}
+
+.devices img {
+  margin-top: 65px;
+	width: 450px;
+}
+
+.choose-us-title {
+  padding-bottom: 50px;
+}
+
+.choose-us-title h2 {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 37px;
+  position: relative;
+}
+
+.choose-us-title h2::after {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  width: 70px;
+  height: 1px;
+  background-color: #56B3DF;
+}
+
+.choose-us-title p {
+  margin-top: 20px;
+  font-size: 19px;
+  line-height: 29px;
+}
+
+.choose-us-item {
+  position: relative;
+  padding-bottom: 4px;
+  padding-left: 80px;
+}
+
+.choose-us-item div {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.choose-us-item div i {
+  font-size: 55px;
+  color: #56B3DF;
+  transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+}
+
+.choose-us-item h3{
+  color:#343434;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.choose-us-item p{
+  color: #727272;
+  font-size: 15px;
+}
+
+
+
+
+
+
+
+
 	/*------
 	TOP PART
 	------*/
