--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@
 		width: 1140px;
 		max-width: 100%;
 		margin: 0 auto;
+		overflow: hidden;
 	}
 	.banner{
 		background-position: center center;
