--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 	html, body {
 		font-family: 'Raleway', sans-serif;
 		color: #244859;
+		overflow-x: hidden;
 	}
 
 	a {
@@ -31,80 +32,13 @@
 	.btn:hover{
 		background: #56B3DF;
 	}
-
-
-
-
-/* Why Chose Us? */
-.choose-us-wraper {
-  padding: 50px 0;
+.blue{
+	 color: #56B3DF;
 }
 
-.devices img {
-  margin-top: 65px;
-	width: 450px;
-}
 
-.choose-us-title {
-  padding-bottom: 50px;
-}
 
-.choose-us-title h2 {
-  text-transform: uppercase;
-  font-weight: 800;
-  font-size: 30px;
-  line-height: 37px;
-  position: relative;
-}
 
-.choose-us-title h2::after {
-  content: "";
-  position: absolute;
-  bottom: -12px;
-  left: 0;
-  width: 70px;
-  height: 1px;
-  background-color: #56B3DF;
-}
-
-.choose-us-title p {
-  margin-top: 20px;
-  font-size: 19px;
-  line-height: 29px;
-}
-
-.choose-us-item {
-  position: relative;
-  padding-bottom: 4px;
-  padding-left: 80px;
-}
-
-.choose-us-item div {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.choose-us-item div i {
-  font-size: 55px;
-  color: #56B3DF;
-  transition: all 1s;
-  -o-transition: all 1s;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-}
-
-.choose-us-item h3{
-  color:#343434;
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: 800;
-}
-
-.choose-us-item p{
-  color: #727272;
-  font-size: 15px;
-}
 
 
 
@@ -214,6 +148,7 @@
 	/*------
 	CUSTOM ELEMENTS
 	------*/
+
 	.gray-bg{
 		background: #f3f3f3;
 	}
@@ -222,7 +157,9 @@
 		width: 1140px;
 		max-width: 100%;
 		margin: 0 auto;
-		overflow: hidden;
+	}
+	.pad{
+		padding: 100px 0;
 	}
 	.banner{
 		background-position: center center;
@@ -256,15 +193,6 @@
 		margin-top: 20px;
 	}
 
-
-	#order-input{
-		color: #56b3df;
-		margin-left: 5px;
-		font-weight: 700;
-		font-size: 30px;
-		outline: none
-	}
-
 	#why-us .gray-bg {
 		padding: 30px 0;
 		min-height: 150px;
@@ -290,6 +218,75 @@
 		transition: 0.5s all ease;
 		font-size: 0;
 	}
+.choose-us-wraper {
+  padding: 50px 0;
+}
+
+.devices img {
+  margin-top: 65px;
+	width: 450px;
+}
+
+.choose-us-title {
+  padding-bottom: 50px;
+}
+
+.choose-us-title h2 {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 37px;
+  position: relative;
+}
+
+.choose-us-title h2::after {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  width: 70px;
+  height: 1px;
+  background-color: #56B3DF;
+}
+
+.choose-us-title p {
+  margin-top: 20px;
+  font-size: 19px;
+  line-height: 29px;
+}
+
+.choose-us-item {
+  position: relative;
+  padding-bottom: 4px;
+  padding-left: 80px;
+}
+
+.choose-us-item div {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.choose-us-item div i {
+  font-size: 55px;
+  color: #56B3DF;
+  transition: all 1s;
+  -o-transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+}
+
+.choose-us-item h3{
+  color:#343434;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.choose-us-item p{
+  color: #727272;
+  font-size: 15px;
+}
 	.home-order {
 		background: url(../images/home-order3.jpg);
 		background-size: cover;
@@ -328,11 +325,51 @@
     background-size: 15px auto;
     margin: 50px 0 50px 5px;
     color: #fff;
-    width: 300px;
     font-weight: 100;
     font-size: 20px;
     padding: 0 0 10px;
     vertical-align: middle;
+}
+.overlay{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.75);
+    z-index: 9;
+}
+.alert {
+    background: #fff none repeat scroll 0 0;
+    border-radius: 5px;
+    left: 0;
+    margin: 0 auto;
+    padding: 30px;
+    position: fixed;
+    right: 0;
+    text-align: center;
+    top: 10%;
+    transition: all 0.3s ease 0s;
+    width: 320px;
+    z-index: 999;
+    transform: translateY(-500px);
+    max-width: 100%;
+    word-break: break-all;
+}
+.alert.hidden-alert{
+        transform: translateY(-500px);
+}
+.alert.shown-alert{
+	 transform: translateY(0);
+}
+.close-alert {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+.close-alert i {
+    color: #56B3DF;
 }
 
 	/*-- about --*/
@@ -413,6 +450,37 @@
 	.check-id{
 		display: none;
 	}
+	.order-form{
+		overflow: hidden;
+	}
+	.order-form > div {
+    padding: 30px;
+    display: inline-block;
+    vertical-align: top;
+      position: relative;
+}
+.order-form > div.first-section {
+    background: #e0e0e0;
+    border-top: 3px solid #56B3DF;
+    width: 30%;
+    z-index: 999;
+
+}
+.order-form > div.second-section {
+	border-top: 3px solid #244859;
+    background: #f3f3f3;
+    transition: 0.5s all ease;
+    width: 30%;
+    opacity: 0;
+    left: -400px;
+}
+.order-form > div.third-section{
+ width: 30%;
+    opacity: 0;
+    left: -400px;
+}
+.order-form > div.second-section
+
 
 
 	/*------
