--- a/css/style.css
+++ b/css/style.css
@@ -144,15 +144,17 @@
 		font-size: 18px;
 		padding: 0 15px;
 	}
-	ul#nav > li:last-child > a, ul#nav_mobile > li:last-child > a{
-		padding-right: 0;
-	}
+	
 	ul#nav > li, ul#nav_mobile > li {
 
 	}
 
 	ul#nav > li > a:hover, ul#nav_mobile > li > a:hover {
 		color: #244859 !important;
+	}
+	.special-btn{
+		background: #244859;
+		padding: 6px 12px;
 	}
 
 
